--- a/templates/secrets-roll.html
+++ b/templates/secrets-roll.html
@@ -1,4 +1,5 @@
 <div class="dice-tooltip">
+  {{#if action}}<div class="chat-label label-stripe-chat">{{action}}</div>{{/if}}
   <div class="die {{roll_status}}">{{roll_status}}</div>
   <ol class="dice-rolls">
     {{#each this.rolls}}
