--- a/templates/item/gear.html
+++ b/templates/item/gear.html
@@ -17,7 +17,7 @@
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       <label>Description:</label>
-      <textarea name="data.description">{{{data.description}}}</textarea>
+      <textarea name="data.description">{{data.description}}</textarea>
       <label>Load:</label>
       <input name="data.load" type="number" value="{{data.load}}" />
     </div>
