--- a/templates/item/playbook.html
+++ b/templates/item/playbook.html
@@ -9,6 +9,7 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
+    <a class="item" data-tab="bonuses">Attributes</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -24,6 +25,32 @@
       <textarea name="data.abilities">{{data.abilities}}</textarea>
       <label>Unique Gear (comma-seperated names):</label>
       <textarea name="data.gear">{{data.gear}}</textarea>
+    </div>
+    <div class="tab" data-group="primary" data-tab="bonuses">
+        <h3>Starting Actions:</h3>
+        {{#each data.actions as |val action|}}
+        {{#if (gteq val 1)}}
+        <p class="flexrow">{{action}}: {{val}}<button class="remove-playbook-action" data-action="{{action}}" title="Remove action"><i class="fas fa-trash"></i></button></p>
+        {{/if}}
+        {{/each}}
+        <p class="flexrow">
+            <select class="new_action">
+                <option value="attune">Attune</option>
+                <option value="command">Command</option>
+                <option value="consort">Consort</option>
+                <option value="finesse">Finesse</option>
+                <option value="hunt">Hunt</option>
+                <option value="prowl">Prowl</option>
+                <option value="skirmish">Skirmish</option>
+                <option value="study">Study</option>
+                <option value="survey">Survey</option>
+                <option value="sway">Sway</option>
+                <option value="tinker">Tinker</option>
+                <option value="wreck">Wreck</option>
+            </select>
+            <input class="new_action_val" type="number" value="2" />
+            <button class="add-playbook-action">Add</button>
+        </p>
     </div>
   </section>
 </form>
